# starface

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LOCAL_DEV.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
apps/ml/: Dockerfile  requirements.txt
apps/ml/app/: _cleanup_text.py  embed.py  enrich.py  enrich_attributes.py  enrich_queue.py  enroll.py  fetch_popularity.py  fetch_wikidata.py  generate_descriptions.py  job_queue.py  main.py
apps/ml/seeds/: README.md  celebrities.csv.example
apps/web/: Dockerfile  drizzle.config.ts  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  wrangler.toml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/drizzle/: schema.ts
apps/web/lib/: analytics.ts  brand-theme.ts  commons.ts  config.ts  db.ts  description-generator.ts  face-embed.ts  i18n.ts  ml-client.ts  settings.ts  storage.ts  wikidata-presets.ts  wikidata-query.ts  wikipedia.ts
apps/web/types/: env.d.ts
docker/: migrate-and-seed.sql
modal_app/: README.md  local_server.py  modal_main.py  pipeline.py  requirements.txt
scripts/: .env.example  .gitignore  README.md  generate-descriptions.sh  package.json  seed.sh  tsconfig.json
scripts/seed/: config.ts  descriptions.ts  enroll.ts  face-embed.ts  wikidata-cli.ts  wikidata.ts
scripts/seed/py/: .env.example  README.md  enroll.py  pyproject.toml  smoke_test.py
scripts/server/: README.md  env-check.ts  index.ts  progress.ts  registry.ts  router.ts  runs.ts  sse.ts  ui.html
(+104 files in other folders)
