[project]
name = "starface-seed-py"
version = "0.1.0"
description = "Local GPU enrollment for StarFace — reuses modal_app/pipeline.py"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "transformers>=4.40,<5",
    "onnxruntime>=1.17",
    "pillow>=10.0",
    "numpy>=1.26,<2",
    "requests>=2.31",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
